# gtfsrealtime-r

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  LICENSE.note.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
LICENSE.d/: .gitkeep
R/: alerts.R  enums.R  extendr-wrappers.R  gtfsrealtime-package.R  positions.R  read.R  trip-modifications.R  updates.R  util.R
articles/: archived.html  archived.md  index.html  index.md  positions.html  positions.md  service_alerts.html  service_alerts.md  stringline.html  stringline.md  trip_updates.html  trip_updates.md
inst/: AUTHORS.md  nyc-service-alerts.pb.bz2  nyc-trip-updates.pb.bz2  nyc-vehicle-positions.pb.bz2
man/: check_timezone.Rd  gtfsrealtime-package.Rd  read_gtfsrt_alerts.Rd  read_gtfsrt_alerts_internal.Rd  read_gtfsrt_positions.Rd  read_gtfsrt_positions_internal.Rd  read_gtfsrt_trip_modifications.Rd  read_gtfsrt_trip_updates.Rd  read_gtfsrt_trip_updates_internal.Rd  (+5 more)
src/rust/: Cargo.toml  build.rs  document.rs
src/rust/src/: alert.rs  check_types.rs  enums.rs  id_deduplicator.rs  lib.rs  read.rs  test_data.rs  trip_modifications.rs  trip_update.rs  util.rs  vehicle_position.rs
src/rust/src/test_data/: alert_unwrapping.rs  duplicate_ids.rs  enum_roundtrip.rs  enum_roundtrip_alerts.rs  enum_roundtrip_positions.rs  enum_roundtrip_updates.rs  invalid_enum_positions.rs  mod.rs  positions_all_values.rs  trip_update_unwrapping.rs
(+70 files in other folders)
